themes/default/css/base.css
/* ... */
 /* Metadata Export */
 
 #exporterUploadArea {
 	border: 1px dashed #ccc;
 	display:none;
 	font-family: 'DIN-Regular', helvetica, sans-serif;
 	font-size:16px;
 	color:#333;
 	text-align: center;
	padding: 10px;
 }
.ui-progressbar {
	border:1px solid #eeeeee !important;
}

/** 
 *
 * Annotation editor 
 *
 **/
.caAnnoEditorPanel {			/* full-window panel */
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    overflow: auto;
    display: none;
    padding:0px !important;
    z-index: 31000;			/* needs to be on top of menu bar, which has z-index=30000 */
    background-color: #ededed;
}
.caAnnoEditorTlContainer {		/* timeline container */
    width:100%;
    height: 130px;
    border-bottom:1px solid #FFFFFF;
    background-color:#ededed;
}
.caAnnoEditorTlInfo {
    float:left;
    width: 90px;
    height: 90px;
    background-color:#dedede;
    clear:left;
    position:relative;
    outline: 2px solid #dedede;
}
.caAnnoEditorTlInfo div.caAnnoEditorInfo {
    margin:5px 5px 0px 5px;
    height: 20px;
}
.caAnnoEditorTlSlider {
	margin: 15px 0 0 0;
}
.caAnnoEditorTlSyncControl {
    position:absolute;
    right: 3px;
    bottom: 3px;
}
.caAnnoEditorTl {
    margin: 0 10px 0 95px;
}
.caAnnoEditorTlAnnotationContainer {
	position: relative;
    margin: 0px 3px 0px 3px;
    border: 2px solid #fff;
    background-color:#fff;
    height: 88px;
    
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.caAnnoEditorTlAnnotationContainer:hover, .caAnnoEditorTlAnnotationContainer:focus {
    border-color: #808080;
}
.caAnnoEditorTlAnnotationContainerSelected {
    border: 2px solid #cc0000;
}
.caAnnoEditorTlAnnotationContainer div.title {
    font-size:12px;
    margin:3px 3px 0px 3px;
    height:35px;
    overflow:hidden;
}
.caAnnoEditorTlAnnotationContainer div.title a {
    font-size:12px;
  	text-decoration: none;
}
.caAnnoEditorTlAnnotationContainer div.timecode a {
    font-size:9px;
    font-weight:normal;
    margin:5px 5px 0px 5px;
    position:relative;
}
.caAnnoEditorTlAnnotationContainer div.timecode a {
    font-size:9px;
    text-decoration: none;
}
.caAnnoEditorTlAnnotationContainer div.editAnnoButton {
	position: absolute;
	right: 3px;
	bottom: 3px;
}
.caAnnoEditorTlAnnotationContainer div.deleteAnnoButton {
	position: absolute;
	right: 3px;
	top: 3px;
}

.caAnnoEditorPlayerAndFormContainer {
	position: relative;
}

.caAnnoMediaPlayerContainer {	/*  media player container */
	position: absolute;
	top: 0px;
	left: 0px;
	
    width: 500px;
    height: 375px;
    
	background-image: url(../graphics/icons/audio.png);
	background-position: center center;
	background-repeat:no-repeat;
    background-color: #000;
}
.caAnnoEditorMediaPlayer {
	width: 500px;
    margin: auto auto 0 auto;
}
.caAnnoEditorAudioMediaPlayer {
	margin-top: 343px;
}
.caAnnoEditorVideoMediaPlayer {

}
.caAnnoMediaPlayerControlsLeft {
	float: left;
	padding: 10px;
}
.caAnnoMediaPlayerControlsRight {
	float: right;
	padding: 10px;
}

.caAnnoEditorEditorScreen {
	position: absolute;
	top: 0px;
	left: 515px;
	
	width: 720px;
	height: 500px;
	overflow: auto;
	margin: 0 10px 0 0;
	background-color: #ededed;
}
.caAnnoEditorInfo {
    font-weight: bold;
}
.caAnnoEditorTlSliderInfo {
	display: none;
	position: absolute; 
	top: -6px; 
	left: 15px; 
	min-width: 60px; 
	padding: 5px 5px 5px 10px; 
	font-size:12px;
	line-height:1em;
	white-space:nowrap;
	color:#FFFFFF;
	background-image: url(../graphics/backgrounds/bgSliderInfo.png);
	background-position: left center;
	background-repeat:no-repeat;
}


/** Carousel **/

.jcarousel {
    position: relative;
    overflow: hidden;
    /*
    (4 * width: 150px) + (3 * margin-right: 1px) = 603px
    */
    width: 100%;
    height: 92px;
}

.jcarousel ul {
    width: 20000em;
    position: relative;
    list-style: none;
    margin: 0;
    padding: 0;
}
 
.jcarousel li {
    float: left;
    width: 150px;
    height: 80px;
    margin-right: 1px;
}

.jcarousel img {
    max-height: 80px;
}

.jcarousel .loading {
    text-align: center;
    line-height: 70px; /* Fake vertical aligning */
}

/** Tool plugins **/
.toolPluginHelpText {
    margin: 5px 0 5px 0px;
    font-size:13px;
}

/** Object location tracking **/
.caHistoryTrackingCurrent {
    position: relative;
	padding: 10px;
	min-height: 60px;
}

div.caHistoryTracking {
    position: relative;
	border-top: 1px dotted #e6e6e6;
	padding: 10px;
	min-height: 60px;
}

div.caHistoryTrackingTab {
	max-height: 400px;
	overflow: auto;
}

/** Object use history **/
div.caHistoryTrackingEntry {
	position: relative;
	display: table; 
	overflow: hidden;
	font-weight: normal;
	font-size: 11px;
	
	width: 700px;
	
	margin: 1px 0 0 5px;
	padding: 10px;
	border-top: 1px dotted #e6e6e6;
}

div.caHistoryTrackingEntryFirst {
	border: none;
}

div.caHistoryTrackingButtonBar {
	padding: 10px;
}

.caChangeLocationButton, .caAddLoanButton, .caAddOccurrenceButton, .caAddCollectionButton, .caSetChildViewButton {
	margin-top: 5px;
}

div.caHistoryTrackingIconContainer {
	float: left;
	display: table; 
	width: 60px;
	height: 60px; 
	overflow: hidden;
	
	border: 2px solid #333;
    border-radius: 5px;
    
	margin: 0 10px 0 0;
}

div.caHistoryTrackingIcon {
	display: table-cell; 
	vertical-align: middle;
}

div.caHistoryTrackingIconText {
	text-align: center;
	font-size: 11px;
	font-style: italic;
}

div.caHistoryTrackingEntryDate {
	position: absolute;
	bottom: 3px;
	right: 3px;
	
	font-style: italic;
	font-size: 9px;
}

div.caHistoryTrackingEntryDelete {
	position: absolute;
	top: 8px;
	right: 3px;
}

div.caHistoryTrackingEntryInterstitialEdit {
    position: absolute;
	top: 8px;
	right: 27px;
}

h2.caHistoryTrackingSetLocationHeading {
	float: left;
}

div.caHistoryTrackingHierarchyBrowser {
	border-top: 2px;
}

table.caHistoryTrackingUpdateLocationMetadata tr td {
	vertical-align: middle;
}
/* ... */

